--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   firebase_core: "^0.5.0"
   firebase_auth: "^0.18.1+1"
   cloud_firestore: "^0.14.1+1"
+  toast: ^0.1.5
 
 
   # The following adds the Cupertino Icons font to your application.
