--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   firebase_auth: "^0.18.1+1"
   cloud_firestore: "^0.14.1+1"
   toast: ^0.1.5
+  http: ^0.12.2
 
 
   # The following adds the Cupertino Icons font to your application.
